--- a/DeepSeek-SM-Deploy-Options.ipynb
+++ b/DeepSeek-SM-Deploy-Options.ipynb
@@ -210,11 +210,11 @@
     "    # DeepSeek does not recommend using system prompts and recommends adding it to the user prompt\n",
     "    user_question = f\"{system_message}\\n\\n{query}\"\n",
     "    payload={'inputs':  f\"\"\"<｜begin▁of▁sentence｜><｜User｜>{user_question}<｜Assistant｜>\"\"\", \n",
-    "     'parameters': {'max_new_tokens': 1500, 'top_p': 0.9, 'temperature': 0.1, \"return_full_text\": False, \"stop\" : [\"<｜end▁of▁sentence｜>\"]}, \"stream\": stream}\n",
+    "     'parameters': {'max_new_tokens': 1500, 'top_p': 0.9, 'temperature': 0.6, \"return_full_text\": False, \"stop\" : [\"<｜end▁of▁sentence｜>\"]}, \"stream\": stream}\n",
     "\n",
     "    # template with system message parameter\n",
     "    # payload={'inputs':  f\"\"\"<｜begin▁of▁sentence｜>{system_message}<｜User｜>{query}<｜Assistant｜>\"\"\", \n",
-    "    #  'parameters': {'max_new_tokens': 500, 'top_p': 0.9, 'temperature': 0.1, \"return_full_text\": False}}\n",
+    "    #  'parameters': {'max_new_tokens': 500, 'top_p': 0.9, 'temperature': 0.6, \"return_full_text\": False}}\n",
     "    \n",
     "    return payload"
    ]
@@ -278,7 +278,7 @@
     "\n",
     "user_question = f\"{system_message}\\n\\n{query}\"\n",
     "payload={'inputs':  f\"\"\"<｜begin▁of▁sentence｜><｜User｜>{user_question}<｜Assistant｜>\"\"\", \n",
-    " 'parameters': {'max_new_tokens': 500, 'top_p': 0.9, 'temperature': 0.1, \"return_full_text\": False}}\n",
+    " 'parameters': {'max_new_tokens': 500, 'top_p': 0.9, 'temperature': 0.6, \"return_full_text\": False}}\n",
     "\n",
     "response = predictor1.predict(json.dumps(payload),\n",
     "                  initial_args={\"ContentType\": \"application/json\"}\n",
@@ -518,7 +518,7 @@
     "    ExecutionRoleArn=role,\n",
     "    ProductionVariants=[{\n",
     "        \"VariantName\": \"AllTraffic\",\n",
-    "        \"InstanceType\": \"ml.g5.12xlarge\",\n",
+    "        \"InstanceType\": \"ml.g5.12xlarge\",\n", # has 4 GPUs each having 24GB RAM
     "        \"InitialInstanceCount\": 1,\n",
     "\t\t\"RoutingConfig\": {\n",
     "            \"RoutingStrategy\": \"LEAST_OUTSTANDING_REQUESTS\"\n",
@@ -582,7 +582,7 @@
     "model_id = 'deepseek-ai/DeepSeek-R1-Distill-Llama-8B' # model will be download form Huggingface hub\n",
     "\n",
     "env = {\n",
-    "    \"TENSOR_PARALLEL_DEGREE\": \"2\",            # use 2 GPUs out of, modify baed on instance types\n",
+    "    \"TENSOR_PARALLEL_DEGREE\": \"2\",            # use 2 GPUs, modify based on instance types\n",
     "    \"OPTION_ROLLING_BATCH\": \"lmi-dist\",           # use LMI-Dist for rolling batching\n",
     "    \"OPTION_TRUST_REMOTE_CODE\": \"true\",\n",
     "   }\n",
