--- a/DeepSeek-SM-Deploy-Options.ipynb
+++ b/DeepSeek-SM-Deploy-Options.ipynb
@@ -518,7 +518,7 @@
     "    ExecutionRoleArn=role,\n",
     "    ProductionVariants=[{\n",
     "        \"VariantName\": \"AllTraffic\",\n",
-    "        \"InstanceType\": \"ml.g5.12xlarge\",\n", # has 4 GPUs each having 24GB RAM
+    "        \"InstanceType\": \"ml.g5.12xlarge\", # has 4 GPUs each having 24GB RAM \n",
     "        \"InitialInstanceCount\": 1,\n",
     "\t\t\"RoutingConfig\": {\n",
     "            \"RoutingStrategy\": \"LEAST_OUTSTANDING_REQUESTS\"\n",
