--- a/DeepSeek-SM-Deploy-Options.ipynb
+++ b/DeepSeek-SM-Deploy-Options.ipynb
@@ -61,7 +61,10 @@
     "# Hub Model configuration. https://huggingface.co/models\n",
     "hub = {\n",
     "\t'HF_MODEL_ID':'deepseek-ai/DeepSeek-R1-Distill-Llama-70B',\n",
-    "\t'SM_NUM_GPUS': json.dumps(8) # Change this based on the GPU used, ml.g6.48xlarge has 8 GPUs\n",
+    "\t'SM_NUM_GPUS': json.dumps(8), # Change this based on the GPU used, ml.g6.48xlarge has 8 GPUs\n",
+    "\t'MAX_BATCH_PREFILL_TOKENS': '25100', # Change this based on the instance type you are using\n",
+    "\t'MAX_INPUT_TOKENS': '20000', # Change this based on the instance type you are using\n",
+    "\t'MAX_TOTAL_TOKENS': '25000', # Change this based on the instance type you are using\n",
     "}\n",
     "\n",
     "\n",
